# ROS2-Robot-Simulation

./: package.xml  requirements.txt  setup.cfg  setup.py
launch/: display.launch.py  gz.launch.py
robot_sim/: object_detection.py  opencv.py  robot.py
rviz/: urdf.rviz
urdf/: robot.urdf  ur5robot.urdf
worlds/: robot_sim_world.sdf
